[project]
name = "NotebookBot"
version = "1.0"
description = "NotebookBot"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "COPYING"}
authors = [
 {name = "Maksim V. Tyushev (aka mandesero)", email = "mandesero@gmail.com"},
 {name = "Bogdan S. Purtov", email = "b@mail.ru"}
]

keywords = ["aiogram", "project"]
classifiers = [
      "Development Status :: 4 - Beta",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]

dependencies = [
    "aiofiles==23.1.0",
    "aiogram==3.0.0b7",
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "alabaster==0.7.13",
    "astroid==2.15.3",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "Babel==2.9.1",
    "black==23.3.0",
    "build==0.10.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "cloudpickle==2.2.1",
    "dill==0.3.6",
    "docutils==0.19",
    "doit==0.36.0",
    "flake8==6.0.0",
    "fluent-compiler==0.3",
    "fluent.syntax==0.19.0",
    "fluentogram==1.1.6",
    "frozenlist==1.3.3",
    "idna==3.4",
    "imagesize==1.4.1",
    "importlib-metadata==6.6.0",
    "iniconfig==2.0.0",
    "isort==5.12.0",
    "Jinja2==3.1.2",
    "lazy-object-proxy==1.9.0",
    "magic-filter==1.0.9",
    "MarkupSafe==2.1.2",
    "mccabe==0.7.0",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "packaging==23.1",
    "pathspec==0.11.1",
    "Pillow==9.5.0",
    "platformdirs==3.2.0",
    "pluggy==1.0.0",
    "pycodestyle==2.10.0",
    "pydantic==1.10.7",
    "pyflakes==3.0.1",
    "Pygments==2.15.0",
    "pylint==2.17.2",
    "PyPDF2==3.0.1",
    "pyproject_hooks==1.0.0",
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "requests==2.28.2",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "Sphinx==6.1.3",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "tomli==2.0.1",
    "tomlkit==0.11.7",
    "typing_extensions==4.5.0",
    "urllib3==1.26.15",
    "wrapt==1.15.0",
    "yarl==1.8.2",
    "zipp==3.15.0"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["Sphinx", "build", "doit", "flake8", "setuptools", "pytest", "pytest-asyncio"]

[tools.setuptools]
Packages = ["src"]

[project.scripts]
RunBot = "src.main:run_bot"

[tool.setuptools.package-dir]
src = "src"

[tool.setuptools.package-data]
src = ["usr_files/*", "ru.ftl", "en.ftl"]